objects/Campaign_Event__c.object
<CustomObject><fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Campaign Events</relationshipLabel>
        <relationshipName>Campaign_Events</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Events</relationshipLabel>
        <relationshipName>Campaign_Events</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Campaign Event</label><nameField>
        <label>Campain Event Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Campaign Events</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>